--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -135,6 +135,57 @@ monitor_filters =
     time      ; Add timestamp with milliseconds for each new line
     log2file  ; Log data to a file “platformio-device-monitor-*.log” located in the current working directory
 
+[env:esp32-wroom32-debug-hobi]
+platform = espressif32
+board = lolin_d32
+build_flags = -Os -DDEBUG_LEVEL=DBG_DEBUG -DDEBUG_ESP_CORE -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_OOM -DDEBUG_ESP_PORT=Serial -std=gnu++14
+   ; Define the TFT driver, pins etc here:
+  -DUSE_SPI_DISPLAY
+  -DUSER_SETUP_LOADED=1
+  -DST7789_DRIVER=1
+  -DTFT_WIDTH=240
+  -DTFT_HEIGHT=240
+
+  ;-DTFT_MISO=19
+  ; // SPI 0
+  ;-DTFT_MOSI=19
+  ;-DTFT_SCLK=18
+  ;-DTFT_CS=5
+  ;-DTFT_DC=17
+  ;-DTFT_RST=21
+
+  ; SPI 1
+  -DUSE_HSPI_PORT
+  -DTFT_MOSI=13
+  -DTFT_SCLK=14
+  -DTFT_CS=-1
+  -DTFT_DC=26
+  -DTFT_RST=27
+  -DTFT_BL=33
+
+  -DTOUCH_CS=-1
+  ;fonts to use
+  ;-DLOAD_FONT2=1
+  ;-DLOAD_FONT4=1
+  ;-DLOAD_FONT6=1
+  ;-DLOAD_FONT7=1
+  ;-DLOAD_FONT8=1
+  -DLOAD_GFXFF=1
+  ;-DSMOOTH_FONT=1
+
+build_unflags = -std=gnu++11
+build_type = debug
+monitor_filters =
+    ;default   ; Remove typical terminal control codes from input
+    time      ; Add timestamp with milliseconds for each new line
+    ;log2file  ; Log data to a file “platformio-device-monitor-*.log” located in the current working directory
+
+lib_deps =
+    ${env.lib_deps}
+    bodmer/TFT_eSPI @ ^2.5.23
+    bodmer/TFT_eWidget @ ^0.0.6
+    
+
 [env:opendtufusionv1-release]
 platform = espressif32
 board = esp32-s3-devkitc-1
