--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -138,21 +138,16 @@ monitor_filters =
 [env:esp32-wroom32-debug-hobi]
 platform = espressif32
 board = lolin_d32
+board_build.partitions = min_spiffs.csv
 build_flags = -Os -DDEBUG_LEVEL=DBG_DEBUG -DDEBUG_ESP_CORE -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_OOM -DDEBUG_ESP_PORT=Serial -std=gnu++14
    ; Define the TFT driver, pins etc here:
   -DUSE_SPI_DISPLAY
   -DUSER_SETUP_LOADED=1
+
   -DST7789_DRIVER=1
   -DTFT_WIDTH=240
-  -DTFT_HEIGHT=240
-
-  ;-DTFT_MISO=19
-  ; // SPI 0
-  ;-DTFT_MOSI=19
-  ;-DTFT_SCLK=18
-  ;-DTFT_CS=5
-  ;-DTFT_DC=17
-  ;-DTFT_RST=21
+  -DTFT_HEIGHT=320
+  -DTFT_RGB_ORDER=TFT_BGR
 
   ; SPI 1
   -DUSE_HSPI_PORT
@@ -180,11 +175,22 @@ monitor_filters =
     time      ; Add timestamp with milliseconds for each new line
     ;log2file  ; Log data to a file “platformio-device-monitor-*.log” located in the current working directory
 
+
 lib_deps =
-    ${env.lib_deps}
+
     bodmer/TFT_eSPI @ ^2.5.23
-    bodmer/TFT_eWidget @ ^0.0.6
-    
+;    bodmer/TFT_eWidget @ ^0.0.6
+
+    https://github.com/yubox-node-org/ESPAsyncWebServer
+    nrf24/RF24 @ ^1.4.5
+    paulstoffregen/Time @ ^1.6.1
+    https://github.com/bertmelis/espMqttClient#v1.4.2
+    bblanchon/ArduinoJson @ ^6.21.0
+    https://github.com/JChristensen/Timezone @ ^1.2.4
+
+
+
+
 
 [env:opendtufusionv1-release]
 platform = espressif32
